--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -22,6 +22,15 @@ body {
   background-repeat: no-repeat;
 }
 
+#btnAudio {
+  height: 50px;
+  width: 100px;
+  background-position: top;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url(../imgs/audio.svg)
+}
+
 
 /* Tabla de Participantes */
 
